2011-01-22  Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac:
	* Headers/Additions/GNUstepBase/config.h.in: Added check for unicode/udat.h.
	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Implemented a few methods.

2011-01-22  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Added stub for 10.4 and above methods.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: Add support for GlobalDefaults directory
	* Source/NSUserDefaults.m: Document GlobalDefaults directory
	* Documentation/Base.gsdoc: Document GlobalDefaults directory
	Implement suggestion by David Chisnall.
	New GlobalDefaults directory support ... if there are .plist files
	in this subdirectory, merge them in before merging in the contents		of the GlobalDefaults.plist file.
	Deprecate use of the old GNUSTEP_EXTRA config file entry.

2011-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Fix to cope with NSXMLParser reporting
	whitespace as character data.

2011-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: For OSX compatibility we now quote strings
	in property lists of they contain non-alphanumerics.  We also warn
	when we parse a dictionary with a missing semicolon at the end.
	* Source/NSXMLParser.m: For OSX compatibility we report all character
	data as characters and never as ignorable whitespace, though this
	seems perverse.
	Implement insertion of default attribute values into elements if we
	have parsed an !ATTLIST which defines them.

2011-01-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Print '(null)' rather than '(nil)' for a nil
	object as this seems to be what OSX does now.
	* Source/NSXMLParser.m: Implement partial support for declarations.

2011-01-12  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Implemented more methods.